--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dde-shell (1.99.35) unstable; urgency=medium
+
+  * chore: drop no longer existed translation resource 
+  * chore: update copywriting of dock modes 
+  * feat: Add animation for position switching to dock	
+  * Update translations from Transifex
+
+-- Wu Jiangyu <wujiangyu@uniontech.com>  Tue, 13 May 2025 17:20:000 +0800
+
 dde-shell (1.99.34) unstable; urgency=medium
 
   * refactor: simplify notification action handling
